4 tutorials on causal inference nearly done

--- a/manuscripts/24-jb-dags/24-jb-dags.tex
+++ b/manuscripts/24-jb-dags/24-jb-dags.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-06-09}
+\date{2024-06-10}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -270,8 +270,8 @@ that unintentionally weaken causal claims
 (\citeproc{ref-bulbulia_2024_experiments}{Bulbulia 2024c};
 \citeproc{ref-hernan2017per}{Hernán \emph{et al.} 2017}). Fortunately,
 recent decades have seen considerable progress in causal data science,
-more commonly known as `causal inference.' The progress has transformed
-those areas of health science, economics, and computer science that have
+commonly called `causal inference.' The progress has transformed those
+areas of health science, economics, and computer science that have
 adopted it. Causal inference provides methods for obtaining valid causal
 inferences from data through careful, systematic workflows.
 
@@ -573,8 +573,8 @@ every other explanation except that of the treatment. They are entitled
 to this inference because randomisation balances the distribution of
 potential confounders across the treatment groups to be compared.
 
-Outside of randomised experiments, however, we lack guarantees for
-balance in the confounders. For this reason, we should prefer developing
+However, we lack guarantees for balance in the confounders outside of
+randomised experiments. For this reason, we should prefer developing
 sound randomised experiments for addressing every causal question that
 experiments can address. Unfortunately, randomised experiments cannot
 address many scientifically important questions. This bitter constraint
@@ -620,7 +620,7 @@ The causal consistency assumption implies that the observed outcome at a
 specific treatment level equates to the counterfactual outcome for that
 individual at the observed treatment level. Although it seems
 straightforward, treatment conditions vary, and treatment heterogeneity
-poses considerable challenges for satisfying this assumption. Refer to
+poses considerable challenges to satisfying this assumption. Refer to
 \hyperref[id-app-c]{Appendix C} for further discussion on how
 investigators may satisfy causal consistency in real-world settings.
 
@@ -643,9 +643,9 @@ There are two types of positivity violation:
 \tightlist
 \item
   \textbf{Random non-positivity}: When a treatment is theoretically
-  possible, but specific treatment levels are not represented in the
-  data. Notably, random non-positivity is the only identifiability
-  assumption verifiable with data.
+  possible but specific treatment levels are not represented in the
+  data, random non-positivity is the only identifiability assumption
+  verifiable with data.
 \item
   \textbf{Deterministic non-positivity}: When the treatment is
   implausible by nature, such as a hysterectomy in biological males.
@@ -673,8 +673,8 @@ groups are conditionally balanced in the variables that could affect the
 potential outcomes. In experimental designs, random assignment
 facilitates this assumption. In observational studies, more effort is
 required to control for any covariate that could account for observed
-correlations between \(A\) and \(Y\) in the absence of a causal effect
-of \(A\) on \(Y\).
+correlations between \(A\) and \(Y\) without a causal effect of \(A\) on
+\(Y\).
 
 Let \(\coprod\) denote independence, and let \(L\) denote the set of
 covariates necessary to ensure this conditional independence.
@@ -1088,7 +1088,7 @@ assumption permits that adjacent nodes may be independent
 \paragraph{Causal Edges Assumption}\label{causal-edges-assumption}
 
 The \textbf{causal edges assumption} states that every parent is a
-direct cause of its children. Given minimalism, the causal edges
+direct cause of their children. Given minimalism, the causal edges
 assumption allows us to read causal dependence in directed acyclic
 graphs. In Pearl's formalism, we use non-parametric structural equations
 to evaluate causal assumptions using statistical distributions (refer to
@@ -1193,15 +1193,31 @@ According to these rules:
   78}; \citeproc{ref-pearl2009a}{Pearl 2009}).
 \end{enumerate}
 
-\subsubsection{Backdoor Path Adjustment}\label{backdoor-path-adjustment}
+\textbf{Backdoor Adjustment}
 
-To obtain an unbiased estimate for the causal effect of \(A\) on \(C\),
-we need to block all backdoor paths. We do this using the rules of
-d-separation by conditioning on a set of covariates \(B\) that is
-sufficient to close all backdoor paths linking \(A\) and \(C\). A path
-is effectively blocked by \(B\) if it includes at least one non-collider
-that is a member of \(B\), or if it does not contain any collider or
-descendants of a collider.
+Pearl's general identification algorithm is known as the `back door
+adjustment theorem' (\citeproc{ref-pearl2009a}{Pearl 2009}).
+
+In a causal directed acyclic graph (DAG), a set of variables \(L\)
+satisfies the backdoor adjustment theorem relative to the treatment
+\(A\) and the outcome \(Y\) if \(L\) blocks every path between \(A\) and
+\(Y\) that contains an arrow pointing into \(A\) (a backdoor path).
+Formally, \(L\) must satisfy two conditions:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \textbf{No Path Condition}: No element of \(L\) is a descendant of
+  \(A\).
+\item
+  \textbf{Blocking Condition}: \(L\) blocks all backdoor paths from
+  \(A\) to \(Y\).
+\end{enumerate}
+
+If \(L\) satisfies these conditions, the causal effect of \(A\) on \(Y\)
+can be estimated by conditioning on \(\boxed{L}\)
+(\citeproc{ref-pearl2009a}{Pearl 2009}).
 
 Pearl also proves a `front-door adjustment' criterion, which is rarely
 used, refer to \hyperref[id-app-e]{Appendix E}.
@@ -1331,7 +1347,7 @@ To estimate a causal effect of \(Y\) on \(A\), we would focus on:
 \(\boxed{Y_{-1}} \to \boxed{A_0} \to Y_1 \rightarrow A_2\). Departing
 from convention, here \(Y\) denotes the treatment and \(A\) denotes the
 outcome. Causal directed acyclic graphs must be acyclic. Yet most
-processes in nature include feedback loops. However there is no
+processes in nature include feedback loops. However, there is no
 contradiction as long as we represent these loops as sequential events.
 
 \begin{enumerate}
@@ -1384,8 +1400,6 @@ contradiction as long as we represent these loops as sequential events.
   of the treatment and outcome.
 \end{enumerate}
 
-\newpage{}
-
 \subsubsection{Summary Part 2}\label{summary-part-2}
 
 We use causal directed acyclic graphs to represent and evaluate
@@ -1411,7 +1425,7 @@ sometimes possible to use causal diagrams for causal discovery, their
 purpose is to clarify d-separation.
 
 This distinction between structural and statistical models is
-fundamental because, absent clearly defined causal contrasts and
+fundamental because absent clearly defined causal contrasts and
 carefully evaluated assumptions about structural sources of bias, the
 statistical structural equation modelling tradition offers no guarantees
 that the coefficients investigators recover are interpretable.
@@ -1487,7 +1501,7 @@ namely:
 Each of these outcomes allows for a specific contrast. There are
 \(\binom{4}{2}\) unique contrasts. Which of the six unique contrasts do
 we wish to consider? It is important that we can order our data in time.
-However, even before thinking about data we must recognise that the
+However, even before thinking about data, we must recognise that the
 question `What is the causal effect of marriage on happiness?' is
 ill-defined. This question does not uniquely indicate which of the six
 causal contrasts to consider. The first step is to state this question.
@@ -1532,7 +1546,7 @@ may bias our total effect estimate.
 
 Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G}_{3.2}\)
 clarifies a response. Ensure that measurements of economic trade are
-obtained for cultural histories before big-Gods arise. Do not condition
+obtained for cultural histories before big Gods arise. Do not condition
 on post-treatment instances of economic trade.
 
 \subsubsection{Example 4: Collider Bias}\label{example-4-collider-bias}
@@ -1801,9 +1815,9 @@ Treatments}\label{example-6-treatment-confounder-feedback-in-sequential-treatmen
 
 Table~\ref{tbl-chronology-notenough} \(\mathcal{G}_6\) illustrates the
 threat of treatment confounder feedback in sequential treatment regimes.
-Suppose we are interested in whether beliefs in big gods affect social
-complexity. Suppose that beliefs in big gods affect economic trade and
-that economic trade may affect beliefs in big gods and social
+Suppose we are interested in whether beliefs in big Gods affect social
+complexity. Suppose that beliefs in big Gods affect economic trade and
+that economic trade may affect beliefs in big Gods and social
 complexity. Suppose the historical record is fragmented such that there
 are unmeasured variables that affect both trade and social complexity.
 Even if these unmeasured variables do not affect the treatment,
@@ -1831,9 +1845,9 @@ to Robins (\citeproc{ref-robins1986}{1986}); Hernán \emph{et al.}
 (\citeproc{ref-hoffman2023}{2023})).
 
 Importantly, we have six potential contrasts for the two sequential
-treatments: beliefs in big gods at both time points vs.~beliefs in big
-gods at neither time point; beliefs in big gods first, then lost
-vs.~never believing in big gods at both:
+treatments: beliefs in big Gods at both time points vs.~beliefs in big
+Gods at neither time point; beliefs in big Gods first, then lost
+vs.~never believing in big Gods at both:
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.1333}}
@@ -1864,8 +1878,8 @@ Counterfactual Outcome
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Regime & Always believe in big gods & \(Y(1,1)\) \\
-Regime & Never believe in big gods & \(Y(0,0)\) \\
+Regime & Always believe in big Gods & \(Y(1,1)\) \\
+Regime & Never believe in big Gods & \(Y(0,0)\) \\
 Regime & Believe once first, then scepticism & \(Y(1,0)\) \\
 Regime & Start with scepticism, then believe & \(Y(0,1)\) \\
 Contrast & Always believe vs.~Never believe & \(E[Y(1,1) - Y(0,0)]\) \\
@@ -1901,8 +1915,8 @@ Table~\ref{tbl-chronology-notenough} \(\mathcal{G}_7\) illustrates the
 threat of confounding bias in sequential treatments even without
 treatment-confounder feedback. Assume the setting is \(\mathcal{G}_6\)
 with two differences. First, assume that the treatment, beliefs in big
-gods, does not affect trade networks. However, assume that an unmeasured
-confounder affects both the beliefs in big gods and the confounder,
+Gods, does not affect trade networks. However, assume that an unmeasured
+confounder affects both the beliefs in big Gods and the confounder,
 trade networks. Such a confounder might be openness to outsiders, a
 feature of ancient cultures for which no clear measures are available.
 We need not imagine that treatment affects future states of confounders
@@ -1970,11 +1984,11 @@ acyclic graphs.
 
 An identification strategy is relative to the question at hand. The
 adjustment criteria for estimating an effect of A on Y will generally
-differ from the adjustment criteria for estimating an effect of Y on A .
-Before attempting to draw any causal diagram, state the problem your
-diagram addresses and the population to whom it applies. Additionally,
-when adopting a specific identification strategy for a treatment or set
-of treatments, the coefficients we obtain for the other variables in the
+differ from those for estimating an effect of \(Y\) on \(A\). Before
+attempting to draw any causal diagram, state the problem your diagram
+addresses and the population to whom it applies. Additionally, when
+adopting a specific identification strategy for a treatment or set of
+treatments, the coefficients we obtain for the other variables in the
 model will often be biased causal effect estimates for those variables.
 
 Moreover, the coefficients obtained from statistical models developed to
@@ -2251,7 +2265,7 @@ within the human sciences might consider VanderWeele \emph{et al.}
 (\citeproc{ref-vanderweele2020}{2020}). The workflows in my research
 group can be found here: Bulbulia
 (\citeproc{ref-bulbulia2024PRACTICAL}{2024a}). However, readers should
-be aware that estimation workflows are quickly evolving and improving.
+know that estimation workflows are quickly evolving and improving.
 
 Nevertheless, after precisely stating our causal question, the most
 difficult and important challenge is considering whether and how it
@@ -2292,7 +2306,7 @@ aims to add to these resources by:
 \item
   Employing causal diagrams to clarify the limitations of longitudinal
   data for certain questions in causal mediation and time-varying
-  confounding under time-varying treatments, which remain areas of
+  confounding under time-varying treatments, which remain topics of
   confusion in many human sciences (see Bulbulia
   (\citeproc{ref-bulbulia2024swigstime}{2024b}) for a detailed
   explanation).
@@ -2328,9 +2342,9 @@ knowledge (\citeproc{ref-godfrey2006strategy}{Godfrey-Smith 2006},
 \citeproc{ref-godfrey2009theory}{2009};
 \citeproc{ref-quine1981theories}{Quine 1981}).
 
-Causal diagrams are at home in Neurath's boat. The tradition of science
-that believes knowledge develops solely from the results of statistical
-tests applied to data should be resisted. The data have never fully
+Causal diagrams are at home in Neurath's boat. We should resist the
+tradition of science that believes knowledge develops solely from the
+results of statistical tests applied to data. The data have never fully
 contained the answers we seek. When reconstructing knowledge, we have
 always relied on assumptions. Causal graphs enable us to make these
 assumptions explicit and to understand what we obtain based on them.
@@ -2351,8 +2365,8 @@ I am grateful to Dr Inkuk Kim for checking previous versions of this
 manuscript and offering feedback.
 
 I am also grateful to two anonymous reviewers and the editor, Charles
-Efferson, of \emph{Evolutionary Human Sciences} for their constructive
-feedback that improved this manuscript.
+Efferson, of Evolutionary Human Sciences, for their constructive
+feedback, which improved this manuscript.
 
 Any remaining errors are my own.
 
@@ -2388,17 +2402,16 @@ societies where it took hold (see: Weber
 (\citeproc{ref-basten2013}{2013}), and for an overview, see: Becker
 \emph{et al.} (\citeproc{ref-becker2016}{2016})).
 
-Suppose we are interested in estimating the Protestant Reformation's
-`Average Treatment Effect'. Let \(A = a^*\) denote the adoption of
-Protestantism. We compare this effect with that of remaining Catholic,
-represented as \(A = a\). We assume that both the concepts of `adopting
-Protestantism' and `economic development' are well-defined (e.g., GDP +1
-century after a country has a Protestant majority contrasted with
-remaining Catholic). The causal effect for any individual country is
-\(Y_i(a^*) - Y_i(a)\). Although we cannot identify this effect, if the
-basic assumptions of causal inference are met, we can estimate the
-average or marginal effect by conditioning on the confounding effects of
-\(L\):
+Suppose we want to estimate the Protestant Reformation's `Average
+Treatment Effect'. Let \(A = a^*\) denote the adoption of Protestantism.
+We compare this effect with that of remaining Catholic, represented as
+\(A = a\). We assume that both the concepts of `adopting Protestantism'
+and `economic development' are well-defined (e.g., GDP +1 century after
+a country has a Protestant majority contrasted with remaining Catholic).
+The causal effect for any individual country is \(Y_i(a^*) - Y_i(a)\).
+Although we cannot identify this effect, if the basic assumptions of
+causal inference are met, we can estimate the average or marginal effect
+by conditioning on the confounding effects of \(L\):
 
 \[
 ATE_{\textnormal{economic~development}} = \mathbb{E}[Y(\textnormal{Became~Protestant}|L) - Y(\textnormal{Remained~Catholic}|L)]
@@ -2442,7 +2455,7 @@ could influence both a country's religious affiliations and its economic
 development.
 
 \textbf{Positivity}: This requires that there is a non-zero probability
-of every level of treatment for every strata of confounders. If we
+of every level of treatment for every stratum of confounders. If we
 consider various confounding factors such as geographical location,
 historical events, or political circumstances, some countries might only
 ever have the possibility of either remaining Catholic or becoming
@@ -2486,7 +2499,7 @@ Treatment}\label{id-app-c}
 
 To better understand how the causal consistency assumption might fail,
 consider a question discussed in the evolutionary human science
-literature about whether a society's beliefs in big gods affect its
+literature about whether a society's beliefs in big Gods affect its
 development of social complexity (\citeproc{ref-beheim2021}{Beheim
 \emph{et al.} 2021}; \citeproc{ref-johnson2015}{Johnson 2015};
 \citeproc{ref-norenzayan2016}{Norenzayan \emph{et al.} 2016};
@@ -2724,10 +2737,10 @@ entire causal effect of \(A\) on \(C\), with no confounding paths
 remaining between \(A\) and \(B\), and any confounding between \(B\) and
 \(C\) must be blocked by \(A\).
 
-The frontdoor criterion is less widely used compared to the backdoor
-criterion because it requires the identification of an appropriate
-mediator that fully captures the causal effect
-(\citeproc{ref-pearl2009a}{Pearl 2009}).
+The frontdoor criterion is less widely used than the backdoor criterion
+because it requires the identification of an appropriate mediator that
+fully captures the causal effect (\citeproc{ref-pearl2009a}{Pearl
+2009}).
 
 \newpage{}
 
