--- a/manuscripts/24-jb-dags/24-jb-experiments.qmd
+++ b/manuscripts/24-jb-dags/24-jb-experiments.qmd
@@ -122,7 +122,7 @@ No.
 
 Assume large sample sizes to minimise random differences in variable distribution. Assume that the experimental trials are double-blind, with consistent treatment conditions across all arms, applied by meticulous investigators. Assume no chance event, other than randomisation. Finally, assume that the target population is not restricted in the sample population, ensuring that the experiments, if internally valid, will generalise. Assume no measurement error in the measures.
 
-Nevertheless, confounding biases can arise. Here, I use eight examples to illustrate common risks. Whereas some risks arise from common flaws in experimental designs, such as post-randomisation selection criteria and post-randomisation covariate adjustment, hazards in estimating the 'per-protocol effect' of treatments do not arise from errors of design. These typically require the use of methods for causal inference in 'real world' observational studies. The eight examples demonstrate the utility of causal directed acyclic graphs (causal DAGs) for easing the cognitive demand in diagnosing confounding bias in experimental designs. Overall, understanding how confounding occurs is crucial for experimental design, data analysis, and inference, demonstrating the utility of causal inference methods for diagnosing and addressing vulnerabilities in randomised experimental designs.
+Nevertheless, confounding biases can arise. Here, I use eight examples to illustrate common risks. Whereas some risks arise from common flaws in experimental designs, such as post-randomisation selection criteria and post-randomisation covariate adjustment, hazards in estimating the 'per-protocol effect' of treatments do not arise from design errors. These typically require the use of methods for causal inference in 'real world' observational studies. The eight examples demonstrate the utility of causal directed acyclic graphs (causal DAGs) for easing the cognitive demand in diagnosing confounding bias in experimental designs. Overall, understanding how confounding occurs is crucial for experimental design, data analysis, and inference, demonstrating the utility of causal inference methods for diagnosing and addressing vulnerabilities in randomised experimental designs.
 
 We begin by defining our terms. [Appendix A](#id-app-a) provides a glossary of terms in causal inference.
 
@@ -138,7 +138,7 @@ $$
 \widehat{ATE}_{\text{target}}^{\text{Per-Protocol}} \ne \widehat{ATE}_{\text{target}}^{\text{Intention-to-Treat}}
 $$
 
-When evaluating evidence for causality, in addition to specifying their causal contrast, effect measure, and target population, investigators should specify whether they are estimating an intention-to-treat or per-protocol effect [@hernán2004; @tripepi2007].
+When evaluating evidence for causality, investigators should specify whether they are estimating an intention-to-treat or per-protocol effect. They should do this in addition to stating a causal contrast, effect measure, and target population, [@hernán2004; @tripepi2007] and to evaluating sources of measurement error bias [@bulbulia2024wierd].
 
 
 ### Meaning of Symbols
@@ -189,9 +189,14 @@ The rules of d-separation are as follows:
      \item {\bf Collider rule} ($A \rightarrowNEW \boxed{C} \leftarrowNEW B$): $A$ and $B$ are independent until conditioning on $C$, which introduces dependence: ($A \cancel{\coprod} B \mid C$). 
 \end{enumerate}
 
-The rules of d-separation give rise to the backdoor criterion and the 'backdoor adjustment' theorem, which provide identification algorithms conditional on the structural assumptions encoded in a causal directed acyclic graph [@pearl1995].
+The rules of d-separation give rise to the backdoor criterion which provides an identification algorithm conditional on the structural assumptions encoded in a causal directed acyclic graph [@pearl1995]. 
 
+**Backdoor Adjustment**: In a causal directed acyclic graph, we say that a set of variables $L$ satisfies the backdoor adjustment theorem relative to the treatment $A$ and the outcome $Y$ if $L$ blocks every path between $A$ and $Y$ that contains an arrow pointing into $A$ (a backdoor path). Formally, $L$ must satisfy two conditions:
 
+1. **No Path Condition**: No element of $L$ is a descendant of $A$.
+2. **Blocking Condition**: $L$ blocks all backdoor paths from $A$ to $Y$.
+
+If $L$ satisfies these conditions, we say the causal effect of $A$ on $Y$ is identified conditional on $\boxed{L}$ [@pearl2009a].
 
 
 <!-- 
@@ -224,7 +229,7 @@ We use causal directed acyclic graphs to describe eight types of confounding bia
 
 ### Example 1: Post-treatment Adjustment Blocks Treatment Effect
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment mediator [@montgomery2018, @mcelreath2020]. Imagine investigators are interested in whether the framing of an authority as religious or secular -- 'source framing' -- affects subjective ratings of confidence in the authority -- 'source credibility.' There are two conditions. A claim is presented from an authority. The content of the claim does not vary by condition. Participants are asked to rate the claim on a credibility scale. Next, imagine that the investigators decide they should control for religiosity. Furthermore, imagine there is a true effect of source framing. Finally, assume that the source framing not only affects source credibility but also affects religiosity. Perhaps viewing a religious authority makes religious people more religious. In this scenario, measuring religiosity following the experimental intervention will partially block the effect of the treatment on the outcome. It might make it appear that the treatment does not work for religious people, when in reality it works because it amplifies religiosity. (Note that in this graph we assume that $L_1$ occurs before $Y_2$, however investigators may have measured $L_1$ after $Y_2$. Our time index pertains to the occurrence of the event, not of its measurement. This statement applies to all examples that follow.)
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.1}$ illustrates the threat of confounding bias by conditioning on a post-treatment mediator [@montgomery2018, @mcelreath2020]. Imagine investigators are interested in whether the framing of an authority as religious or secular -- 'source framing' -- affects subjective ratings of confidence in the authority -- 'source credibility.' There are two conditions. A claim is presented from an authority. The content of the claim does not vary by condition. Participants are asked to rate the claim on a credibility scale. Next, imagine that the investigators decide they should control for religiosity. Furthermore, imagine there is a true effect of source framing. Finally, assume that the source framing not only affects source credibility but also affects religiosity. Perhaps viewing a religious authority makes religious people more religious. In this scenario, measuring religiosity following the experimental intervention will partially block the effect of the treatment on the outcome. It might make it appear that the treatment does not work for religious people, when in reality it works because it amplifies religiosity. (Note that in this graph we assume that $L_1$ occurs before $Y_2$, however, investigators may have measured $L_1$ after $Y_2$. Our time index pertains to the occurrence of the event, not to its measurement. This statement applies to all examples that follow.)
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{1.2}$ clarifies a response: do not control post-treatment variables, here the intermediary effects of 'religiosity'. If effect-modification by religiosity is scientifically interesting, measure religiosity before randomisation. Randomisation did not prevent confounding.
 
@@ -234,26 +239,26 @@ We use causal directed acyclic graphs to describe eight types of confounding bia
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{2.2}$ clarifies a response: do not control post-treatment variables.
 
-The point that investigators should not condition on post-treatment variables can be illustrated with a common flaw in experimental designs: exclusion based on 'attention checks'. Consider that if an experimental condition affects attention and an unmeasured variable is a common cause of attention and the outcome, then selection on attention will induce confounding bias in a randomised experiment. For example, imagine that people are more attentive in the scientific authority design because science is interesting -- whether or not one is religious, yet religion is not interesting whether or not one is religious. Suppose further that an unmeasured 'altruistic disposition' affects both attention and ratings of source credibility. By selecting on attention, investigators may unwittingly destroy randomisation. If attention is a scientifically interesting effect modifier, it should be measured before random assignment to treatment.
+The point that investigators should not condition on post-treatment variables can be illustrated with a common flaw in experimental designs: exclusion based on 'attention checks'. Consider that if an experimental condition affects attention and an unmeasured variable is a common cause of attention and the outcome, then selection on attention will induce confounding bias in a randomised experiment. For example, imagine that people are more attentive to the scientific authority design because science is interesting -- whether or not one is religious, yet religion is not interesting whether or not one is religious. Suppose further that an unmeasured 'altruistic disposition' affects both attention and ratings of source credibility. By selecting on attention, investigators may unwittingly destroy randomisation. If attention is a scientifically interesting effect modifier, it should be measured before random assignment to treatment.
 
 
 ### Example 3: Demographic Measures at End of Study Induce Collider Stratification Bias
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.1}$ illustrates the threat of confounding bias from adjusting for post-treatment variables, here, one affected by the treatment and outcome absent any unmeasured confounder. In our example, imagine both the treatment, source framing, and the outcome, source credibility, affect religiosity measured at the end of the study. Investigators measure religiosity at the end of the study and include this measure as a covariate. However, doing so induces collider bias such that if both the treatment and outcome are positively associated with religiosity, the collider, they will be negatively associated with each other. Conditioning on the collider risks the illusion of a negative experimental effect in the absence of causality.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.1}$ illustrates the threat of confounding bias from adjusting for post-treatment variables, here, one affected by the treatment and outcome absent any unmeasured confounder. In our example, imagine both the treatment, source framing, and the outcome, source credibility, affect religiosity measured at the end of the study. Investigators measure religiosity at the end of the study and include this measure as a covariate. However, doing so induces collider bias such that if both the treatment and outcome are positively associated with religiosity, the collider, they will be negatively associated with each other. Conditioning on the collider risks the illusion of a negative experimental effect without causality.
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.2}$ clarifies a response: again, do not control post-treatment variables. Here, 'religiosity' measured after the end of the study. If the scientific interest is in effect modification or obtaining statistical precision, measure covariates before randomisation.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{3.2}$ clarifies a response: again, do not control post-treatment variables. Here, 'religiosity' is measured after the end of the study. If the scientific interest is in effect modification or obtaining statistical precision, measure covariates before randomisation.
 
 ### Example 4: Demographic Measures at End of Study Condition on a Collider That Opens a Backdoor Path
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{4.1}$ illustrates the threat of confounding bias by adjusting for post-treatment variables, here affected only by the treatment and an unmeasured cause of the outcome. Suppose source credibility affects religiosity (religious people are reminded of their faith), but there is no experimental effect of framing on credibility. Imagine further that there is an unmeasured common cause of the covariate religiosity and the outcome source credibility. This unmeasured confounder might be religious education in childhood. In this scenario, conditioning on the post-treatment variable religiosity will open a backdoor path between the treatment and outcome, leading to an association in the absence of causation. Again, we find that randomisation did not prevent confounding.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{4.1}$ illustrates the threat of confounding bias by adjusting for post-treatment variables, here affected only by the treatment and an unmeasured cause of the outcome. Suppose source credibility affects religiosity (religious people are reminded of their faith), but there is no experimental effect of framing on credibility. Imagine further that there is an unmeasured common cause of the covariate religiosity and the outcome source credibility. This unmeasured confounder might be religious education in childhood. In this scenario, conditioning on the post-treatment variable religiosity will open a backdoor path between the treatment and outcome, leading to an association without causation. Again, we find that randomisation did not prevent confounding.
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{4.2}$ clarifies a response. Again, unless investigators can rule out an effect of treatment, they should not condition on a post-treatment covariate. The covariates of interest should be measured before randomisation.
 
 ### Example 5: Treatment Affects Attrition Biasing Measure of Outcome
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ Suppose that the experimental condition affects measurement error in self-reported source credibility $U_{\Delta Y}$. For example, suppose that source framing has no effect on credibility. However, those in the scientific authority condition are more likely to express credibility for science due to self-presentation bias. Likewise, perceiving the investigators to be irreligious, participants in the religious source framing condition might report less credibility for religious authorities than they secretly harbour. Directed measurement error from the treatment to the measurement error of the outcomes creates an association in the absence of true causality, which we denote by removing any arrow between the treatment $A$ and the true outcome $Y$.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ Suppose that the experimental condition affects measurement error in self-reported source credibility $U_{\Delta Y}$. For example, suppose that source framing has no effect on credibility. However, those in the scientific authority condition are more likely to express credibility for science due to self-presentation bias. Likewise, perceiving the investigators to be irreligious, participants in the religious source framing condition might report less credibility for religious authorities than they secretly harbour. Directed measurement error from the treatment to the measurement error of the outcomes creates an association without true causality, which we denote by removing any arrow between the treatment $A$ and the true outcome $Y$.
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ suggests there is no easy solution to directed measurement error bias in this setting. If the magnitude of the bias were known, investigators could apply adjustments [@lash2009applying]. Additional experiments might be devised that are insensitive to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent confounding by directed measurement error bias. Investigators must be vigilant.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ suggests there is no easy solution to directed measurement error bias in this setting. If the magnitude of the bias were known, investigators could apply adjustments [@lash2009applying]. Additional experiments might be devised that are insensitive to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for a relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent confounding by directed measurement error bias. Investigators must be vigilant.
 
 
 ### Example 6: Per Protocol Effect Lost in Sustained Treatments Where Treatment Adherence Is Affected by a Measured Confounder
@@ -267,17 +272,17 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 ### Example 7: Per protocol effect lost in sustained treatments where past treatments affect measured confounder of future treatment adherence
 
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where past treatments affect measured confounder of future treatment adherence.  Suppose that yoga affects flexibility. We should condition on pre-treatment measures of flexibility to identify the per-protocal effect. However, conditioning on the post-treatment measure of flexibilty, $\boxed{L_1}$ induces collider stratification bias. This path runs from $A_1 \associationred L_1 \associationred U \associationred Y_3$. However, if we do not condition on $L_1$ there is an open backdoor path from $A_1 \associationred U \associationred Y_3$.  We cannot estimate a per-protocal effect by conditioning strategies.  
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where past treatments affect measured confounder of future treatment adherence.  Suppose that yoga affects flexibility. We should condition on pre-treatment measures of flexibility to identify the per-protocol effect. However, conditioning on the post-treatment measure of flexibility, $\boxed{L_1}$ induces collider stratification bias. This path runs from $A_1 \associationred L_1 \associationred U \associationred Y_3$. However, if we do not condition on $L_1$ there is an open backdoor path from $A_1 \associationred U \associationred Y_3$.  We cannot estimate a per-protocol effect by conditioning strategies.  
 
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ does not clarify the response.  However, in a sequential treatment with fixed strategies, in which there is sequential exchangeability -- or no unmeasured confounding at each time point -- valid estimators for the sequential treatments may be constructed (refer to @hernan2024WHATIF; @diaz2021nonparametric; @hoffman2023). Although we may niavely obtain an intention-to-treat effect estimate withouth special methods, infering an effect of doing yoga on well-being -- the per-protocal effect, requires special methods. These methods are not routinely used in the human sciences. 
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{7}$ does not clarify the response.  However, in a sequential treatment with fixed strategies, in which there is sequential exchangeability -- or no unmeasured confounding at each time point -- valid estimators for the sequential treatments may be constructed (refer to @hernan2024WHATIF; @diaz2021nonparametric; @hoffman2023). Although we may naively obtain an intention-to-treat effect estimate without special methods, inferring an effect of doing yoga on well-being -- the per-protocol effect, requires special methods. These methods are not routinely used in the human sciences. 
 
 
 ### Example 8: Per Protocol Effect Lost in Sustained Treatments Because Both Measured and Unmeasured Confounders Affect Treatment Adherence
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{8}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where there are both measured and unmeasured confounders. Suppose flexibility affects adherence, yoga affects flexibility, and an unmeasured variable, such as prejudice toward eastern spiritual practices, affects adherence. We have no measures for this variable. There is unmeasured confounding.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{8}$ illustrates the threat for identifying the per-protocol effect in sustained treatments with measured and unmeasured confounders. Suppose flexibility affects adherence, yoga affects flexibility, and an unmeasured variable, such as prejudice toward Eastern spiritual practices, affects adherence. We have no measures for this variable. There is unmeasured confounding.
 
-If there were no effect of yoga on well-being except through flexibility, and if flexibility were not affected by the unmeasured antipathy toward eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024stating; @hoffman2023; @diaz2023lmtp].
+If there were no effect of yoga on well-being except through flexibility, and furthermore if flexibility were not affected by the unmeasured antipathy toward Eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024stating; @hoffman2023; @diaz2023lmtp].
 
 ## Conclusions
 
@@ -285,7 +290,7 @@ The examples considered here do not exhaust all threats to causal inference in e
 
 First, there is no need to adjust for baseline confounders in a non-sequential randomised experiment. Although an unadjusted difference of means should be reported, Lin has shown that if a study is sufficiently powered, regression adjustment where the full set of treatments are interacted with baseline covariates may improve (and will not diminish) asymptotic precision [@lin2012regressexperiments]. In some settings, investigators will want to evaluate effect modification with strata of covariates at baseline. However, in sufficiently large samples, randomisation ensures balance.
 
-Second, confounding biases can occur in randomised experiments even when randomisation succeeds. To evaluate such bias, we must first state whether our causal estimand is the intention-to-treat effect or the per-protocol effect. Randomisation recovers an unbiased estimate of the intention-to-treat effect — that is, the effect of treatment assignment. Randomisation will only recover the per-protocol effect, the effect of following a treatment, if those assigned to treatment adhere to their assigned treatment.
+Second, confounding biases can occur in randomised experiments even when randomisation succeeds. To evaluate such bias, we must first state whether our causal estimand is the intention-to-treat effect or the per-protocol effect. Randomisation recovers an unbiased estimate of the intention-to-treat effect—that is, the effect of treatment assignment. Randomisation will only recover the per-protocol effect, the effect of following treatment, when those assigned to treatment adhere to their assignments.
 
 Third, causal directed acyclic graphs are useful for clarifying sources of bias for both the intention-to-treat effect and the per-protocol effect. For the intention-to-treat effect, biases arise in two main ways: when investigators impose selection criteria on participants after randomisation (e.g., assessing treatment effects only in those who have followed protocols) or when investigators estimate treatment effects using covariates collected after randomisation. Both post-treatment selection and post-treatment conditioning are self-inflicted sources of confounding bias. The remedy is to not allow your design to compromise randomisation. For the per-protocol effect, randomisation cannot guarantee unbiased estimates. Obtaining consistent estimates for the per-protocol effect requires the same assumptions and methods that are required when estimating causal effects in observational studies.
 
@@ -302,7 +307,7 @@ From these observations, we offer the following practical advice:
 6. Do not infer per-protocol effects from the portion of the sample that followed experimental protocols. Such selection can lead to differences between the study population at the start and end, compromising external validity.
 7. Where possible, report both the per-protocol effect and the intention-to-treat effect.
 
-It is beyond the scope of this commentary to describe the special methods for estimating per-protocol effects with multiple sequential treatments. Our task has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is typically more challenging than many experimental human scientists presently understand [refer to @montgomery2018]. Methods for causal inference have wide scope for improving the design, analysis, and interpretation of experimental research.
+It is beyond the scope of this commentary to describe the special methods for estimating per-protocol effects with multiple sequential treatments. Our task has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is typically more challenging than many experimental human scientists presently understand [refer to @montgomery2018]. Methods for causal inference have a wide scope for improving the design, analysis, and interpretation of experimental research.
 
 {{< pagebreak >}}
 
@@ -332,6 +337,3 @@ This work is supported by a grant from the Templeton Religion Trust (TRT0418) an
 ```
 Glossary
 :::
-
-
-
